[project]
name = "miniapi"
version = "1.0-1"
description = "Minisoft Python API (miniapi) is a library that allows your Python source code to run smoothly on any platform.
With it, your Python source code can run on any platform without modification."
authors = [
    {name = "Minisoft Team, Douglas Woods", email = "xinhaoli2023@outlook.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Operating System",
]
keywords = ["cross-platform", "compatibility", "os", "filesystem", "process"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2023.0.0",
    "sphinx-copybutton>=0.5.0",
]
all = [
    "requests>=2.28.0",  # 网络功能需要
    "colorama>=0.4.0",   # Windows颜色支持
]

[project.urls]
Homepage = "https://github.com/Douglas-Woods2023/miniapi"
Documentation = "http://sj.frp.one:40092/miniapi.html"
Repository = "https://github.com/Douglas-Woods2023/miniapi"
"Bug Tracker" = "https://github.com/Douglas-Woods2023/miniapi/issues"
"Changelog" = "https://github.com/Douglas-Woods2023/miniapi/releases"

[project.scripts]
miniapi = "miniapi.cli.commands:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["miniapi"]

[tool.setuptools.package-dir]
"miniapi" = "miniapi"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=miniapi --cov-report=term-missing"